Prevent minor bottom border gap in error details cell

--- a/assets/css/src/components/_wp-list-table-kept-errors.scss
+++ b/assets/css/src/components/_wp-list-table-kept-errors.scss
@@ -1,8 +1,8 @@
 // Row left border indicating error status.
 .wp-list-table.table-view-list > tbody > tr {
 
-	&.expanded + tr > :first-child {
-		border-left: 4px solid transparent; // Push the details content so that it aligns with the title row.
+	&.expanded:not(.kept) + tr > :first-child {
+		padding-left: 10px + 4px; // Push the details content by 4px (border width) so that it aligns with the title row.
 	}
 
 	&.kept {
